Update translation files
Updated by "Update PO files to match POT (msgmerge)" add-on in Weblate.

Co-authored-by: Codeberg Translate <translate@codeberg.org>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/et.po
+++ b/po/et.po
@@ -124,7 +124,8 @@ msgstr "Kunst"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
 msgid ""
-"Add Earth Science Picture of the Day and Earth Observatory Image of the Day."
+"Add Earth Science Picture of the Day and NASA Earth Observatory Image of the "
+"Day."
 msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
@@ -715,10 +716,13 @@ msgctxt "source name"
 msgid "Earth Science Picture of the Day"
 msgstr "Päevapilt"
 
-#: src/source.rs:71
+#: src/source.rs:74
+#, fuzzy
+#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
-msgid "Earth Observatory Image of the Day"
+msgid "NASA Earth Observatory Image of the Day"
 msgstr ""
+"NASA astronoomiateemaline päevapilt (NASA Astronomy Picture Of The Day)"
 
 #: src/source/bing.rs:81
 #, fuzzy
