--- a/po/nl.po
+++ b/po/nl.po
@@ -122,7 +122,8 @@ msgstr "Kunst"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
 msgid ""
-"Add Earth Science Picture of the Day and Earth Observatory Image of the Day."
+"Add Earth Science Picture of the Day and NASA Earth Observatory Image of the "
+"Day."
 msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
@@ -719,10 +720,12 @@ msgctxt "source name"
 msgid "Earth Science Picture of the Day"
 msgstr "Afbeelding van de dag"
 
-#: src/source.rs:71
+#: src/source.rs:74
+#, fuzzy
+#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
-msgid "Earth Observatory Image of the Day"
-msgstr ""
+msgid "NASA Earth Observatory Image of the Day"
+msgstr "NASA-astronomiefoto van de dag"
 
 #: src/source/bing.rs:81
 #, fuzzy
