--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -118,7 +118,8 @@ msgstr "作品"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
 msgid ""
-"Add Earth Science Picture of the Day and Earth Observatory Image of the Day."
+"Add Earth Science Picture of the Day and NASA Earth Observatory Image of the "
+"Day."
 msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
@@ -676,10 +677,12 @@ msgctxt "source name"
 msgid "Earth Science Picture of the Day"
 msgstr "今日图片"
 
-#: src/source.rs:71
+#: src/source.rs:74
+#, fuzzy
+#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
-msgid "Earth Observatory Image of the Day"
-msgstr ""
+msgid "NASA Earth Observatory Image of the Day"
+msgstr "NASA 今日天文图片"
 
 #: src/source/bing.rs:81
 #, fuzzy
