--- a/po/de.po
+++ b/po/de.po
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2025-04-21 11:41+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/"
-"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
+"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -114,8 +114,13 @@ msgid "Artwork"
 msgstr "Kunstwerk"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
+#, fuzzy
+#| msgid ""
+#| "Add Earth Science Picture of the Day and Earth Observatory Image of the "
+#| "Day."
 msgid ""
-"Add Earth Science Picture of the Day and Earth Observatory Image of the Day."
+"Add Earth Science Picture of the Day and NASA Earth Observatory Image of the "
+"Day."
 msgstr ""
 "Earth Science Bild des Tages und Earth Observatory Bild des Tages "
 "hinzugefügt."
@@ -704,11 +709,11 @@ msgctxt "source name"
 msgid "Earth Science Picture of the Day"
 msgstr "Earth Science Bild des Tages"
 
-#: src/source.rs:71
+#: src/source.rs:74
 #, fuzzy
 #| msgid "NASA Earth Observatory Image Of The Day"
 msgctxt "source name"
-msgid "Earth Observatory Image of the Day"
+msgid "NASA Earth Observatory Image of the Day"
 msgstr "NASA Erdbeobachtung Bild des Tages"
 
 #: src/source/bing.rs:81
@@ -751,6 +756,12 @@ msgstr "%artist (%license)"
 msgctxt "source.wikimedia.copyright"
 msgid "Unknown, all rights reserved"
 msgstr "Unbekannt, alle Rechte vorbehalten"
+
+#, fuzzy
+#~| msgid "NASA Earth Observatory Image Of The Day"
+#~ msgctxt "source name"
+#~ msgid "Earth Observatory Image of the Day"
+#~ msgstr "NASA Erdbeobachtung Bild des Tages"
 
 #~ msgid "NASA Astronomy Picture Of The Day"
 #~ msgstr "NASA Astronomie Bild des Tages"
