--- a/po/nl.po
+++ b/po/nl.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-07 10:21+0000\n"
+"PO-Revision-Date: 2025-04-22 15:53+0000\n"
 "Last-Translator: Vistaus <vistaus@noreply.codeberg.org>\n"
-"Language-Team: Dutch <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
+"Language-Team: Dutch <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,10 +43,6 @@ msgid "Your daily wallpaper"
 msgstr "Uw dagelijkse achtergrond"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:8
-#, fuzzy
-#| msgid ""
-#| "Get a picture of the day from the following sources as your daily "
-#| "wallpaper."
 msgid ""
 "Get a picture of the day from the following sources and use as your daily "
 "wallpaper."
@@ -55,8 +51,6 @@ msgstr ""
 "bureaubladachtergrond."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:10
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgid "NASA Astronomy Picture of the Day"
 msgstr "NASA-astronomiefoto van de dag"
 
@@ -69,20 +63,16 @@ msgid "Simon Stålenhag Artwork"
 msgstr "Kunst van Simon Stålenhag"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:13
-#, fuzzy
-#| msgid "Wikimedia Picture Of The Day"
 msgid "Wikimedia Picture of the Day"
 msgstr "Wikimedia-afbeelding van de dag"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:14
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgid "Earth Science Picture of the Day"
-msgstr "Afbeelding van de dag"
+msgstr "Earth Science-afbeelding van de dag"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:15
 msgid "NASA Earth Observatory Image of the Day"
-msgstr ""
+msgstr "NASA-aardeobservatiefoto van de dag"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:17
 msgid ""
@@ -124,7 +114,7 @@ msgstr "Kunst"
 msgid ""
 "Add Earth Science Picture of the Day and NASA Earth Observatory Image of the "
 "Day."
-msgstr ""
+msgstr "Nieuw: Earth Science- en NASA-aardeobservatiefoto's van de dag."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
 msgid ""
@@ -459,12 +449,12 @@ msgstr "Voorkeuren openen"
 #: src/app.rs:456
 msgctxt "command-line.option.description"
 msgid "Show image for the given date"
-msgstr ""
+msgstr "Toon de afbeelding van de opgegeven datum"
 
 #: src/app.rs:461
 msgctxt "command-line.option.arg.description"
 msgid "YYYY-MM-DD"
-msgstr ""
+msgstr "JJJJ-MM-DD"
 
 #: src/app.rs:637
 msgctxt "portal.request-background.reason"
@@ -690,8 +680,6 @@ msgid "Picture Of The Day"
 msgstr "Afbeelding van de dag"
 
 #: src/source.rs:66
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
 msgid "NASA Astronomy Picture of the Day"
 msgstr "NASA-astronomiefoto van de dag"
@@ -702,8 +690,6 @@ msgid "Bing"
 msgstr "Bing"
 
 #: src/source.rs:68
-#, fuzzy
-#| msgid "Wikimedia Picture Of The Day"
 msgctxt "source name"
 msgid "Wikimedia Picture of the Day"
 msgstr "Wikimedia-afbeelding van de dag"
@@ -714,23 +700,16 @@ msgid "Simon Stålenhag"
 msgstr "Simon Stålenhag"
 
 #: src/source.rs:70
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgctxt "source name"
 msgid "Earth Science Picture of the Day"
-msgstr "Afbeelding van de dag"
+msgstr "Earth Science-afbeelding van de dag"
 
 #: src/source.rs:74
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
 msgid "NASA Earth Observatory Image of the Day"
-msgstr "NASA-astronomiefoto van de dag"
+msgstr "NASA-aardeobservatiefoto van de dag"
 
 #: src/source/bing.rs:81
-#, fuzzy
-#| msgctxt "source.stalenhag.copyright"
-#| msgid "All rights reserved."
 msgctxt "source.bing.copyright"
 msgid "All rights reserved."
 msgstr "Alle rechten voorbehouden."
@@ -738,7 +717,7 @@ msgstr "Alle rechten voorbehouden."
 #: src/source/eoiod.rs:37
 msgctxt "source.eoiod.copyright"
 msgid "NASA Earth Observatory"
-msgstr ""
+msgstr "NASA Earth Observatory"
 
 #: src/source/stalenhag.rs:95
 msgctxt "source.stalenhag.copyright"
