--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-12 09:21+0000\n"
+"PO-Revision-Date: 2025-04-22 15:53+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
-"Language-Team: Chinese (Simplified Han script) <https://translate.codeberg."
-"org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/zh_Hans/>\n"
+"Language-Team: Chinese (Simplified Han script) <https://"
+"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
+"de-swsnr-pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,18 +44,12 @@ msgid "Your daily wallpaper"
 msgstr "您的每日壁纸"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:8
-#, fuzzy
-#| msgid ""
-#| "Get a picture of the day from the following sources as your daily "
-#| "wallpaper."
 msgid ""
 "Get a picture of the day from the following sources and use as your daily "
 "wallpaper."
-msgstr "从以下来源获取当天的图片作为您的每日壁纸。"
+msgstr "从以下来源获取当天的图片，并用作您的每日壁纸。"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:10
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgid "NASA Astronomy Picture of the Day"
 msgstr "NASA 今日天文图片"
 
@@ -67,20 +62,16 @@ msgid "Simon Stålenhag Artwork"
 msgstr "Simon Stålenhag 作品"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:13
-#, fuzzy
-#| msgid "Wikimedia Picture Of The Day"
 msgid "Wikimedia Picture of the Day"
 msgstr "维基媒体今日图片"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:14
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgid "Earth Science Picture of the Day"
-msgstr "今日图片"
+msgstr "Earth Science 今日图片"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:15
 msgid "NASA Earth Observatory Image of the Day"
-msgstr ""
+msgstr "NASA 地球观测站今日图片"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:17
 msgid ""
@@ -120,7 +111,7 @@ msgstr "作品"
 msgid ""
 "Add Earth Science Picture of the Day and NASA Earth Observatory Image of the "
 "Day."
-msgstr ""
+msgstr "添加 Earth Science 今日图片和 NASA 地球观测站今日图片。"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
 msgid ""
@@ -441,12 +432,12 @@ msgstr "打开首选项"
 #: src/app.rs:456
 msgctxt "command-line.option.description"
 msgid "Show image for the given date"
-msgstr ""
+msgstr "显示给定日期的图片"
 
 #: src/app.rs:461
 msgctxt "command-line.option.arg.description"
 msgid "YYYY-MM-DD"
-msgstr ""
+msgstr "YYYY-MM-DD"
 
 #: src/app.rs:637
 msgctxt "portal.request-background.reason"
@@ -647,8 +638,6 @@ msgid "Picture Of The Day"
 msgstr "今日图片"
 
 #: src/source.rs:66
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
 msgid "NASA Astronomy Picture of the Day"
 msgstr "NASA 今日天文图片"
@@ -659,8 +648,6 @@ msgid "Bing"
 msgstr "必应"
 
 #: src/source.rs:68
-#, fuzzy
-#| msgid "Wikimedia Picture Of The Day"
 msgctxt "source name"
 msgid "Wikimedia Picture of the Day"
 msgstr "维基媒体今日图片"
@@ -671,23 +658,16 @@ msgid "Simon Stålenhag"
 msgstr "Simon Stålenhag"
 
 #: src/source.rs:70
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgctxt "source name"
 msgid "Earth Science Picture of the Day"
-msgstr "今日图片"
+msgstr "Earth Science 今日图片"
 
 #: src/source.rs:74
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
 msgid "NASA Earth Observatory Image of the Day"
-msgstr "NASA 今日天文图片"
+msgstr "NASA 地球观测站今日图片"
 
 #: src/source/bing.rs:81
-#, fuzzy
-#| msgctxt "source.stalenhag.copyright"
-#| msgid "All rights reserved."
 msgctxt "source.bing.copyright"
 msgid "All rights reserved."
 msgstr "版权所有。"
@@ -695,7 +675,7 @@ msgstr "版权所有。"
 #: src/source/eoiod.rs:37
 msgctxt "source.eoiod.copyright"
 msgid "NASA Earth Observatory"
-msgstr ""
+msgstr "NASA 地球观测站"
 
 #: src/source/stalenhag.rs:95
 msgctxt "source.stalenhag.copyright"
