--- a/po/fi.po
+++ b/po/fi.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-02 08:21+0000\n"
-"Last-Translator: Ricky-Tigg <ricky-tigg@noreply.codeberg.org>\n"
-"Language-Team: Finnish <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/fi/>\n"
+"PO-Revision-Date: 2025-04-22 15:52+0000\n"
+"Last-Translator: artnay <artnay@noreply.codeberg.org>\n"
+"Language-Team: Finnish <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,19 +43,14 @@ msgid "Your daily wallpaper"
 msgstr "Päivittäinen taustakuva"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:8
-#, fuzzy
-#| msgid ""
-#| "Get a picture of the day from the following sources as your daily "
-#| "wallpaper."
 msgid ""
 "Get a picture of the day from the following sources and use as your daily "
 "wallpaper."
 msgstr ""
-"Hanki kuva päivästä seuraavista lähteistä päivittäiseksi taustakuvaksi."
+"Hanki päivän kuva seuraavista lähteistä ja käytä sitä päivittäisenä "
+"taustakuvana."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:10
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgid "NASA Astronomy Picture of the Day"
 msgstr "NASA-tähtitieteen päivän kuva"
 
@@ -68,20 +63,16 @@ msgid "Simon Stålenhag Artwork"
 msgstr "Simon Stålenhagin taideteos"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:13
-#, fuzzy
-#| msgid "Wikimedia Picture Of The Day"
 msgid "Wikimedia Picture of the Day"
 msgstr "Wikimedian päivän kuva"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:14
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgid "Earth Science Picture of the Day"
-msgstr "Päivän kuva"
+msgstr "Earth Sciencen päivän kuva"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:15
 msgid "NASA Earth Observatory Image of the Day"
-msgstr ""
+msgstr "NASA:n maaobservatorion päivän kuva"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:17
 msgid ""
@@ -247,25 +238,19 @@ msgid "Toggle sidebar"
 msgstr "Sivupalkki päällä/pois"
 
 #: resources/gtk/help-overlay.blp:57
-#, fuzzy
-#| msgctxt "start-page.button.label"
-#| msgid "Get images"
 msgctxt "shortcuts group title"
 msgid "Navigate images"
-msgstr "Nouda kuvia"
+msgstr "Liiku kuvien välillä"
 
 #: resources/gtk/help-overlay.blp:60 resources/gtk/help-overlay.blp:65
 msgctxt "shortcut description"
 msgid "Previous image"
-msgstr ""
+msgstr "Edellinen kuva"
 
 #: resources/gtk/help-overlay.blp:70 resources/gtk/help-overlay.blp:75
-#, fuzzy
-#| msgctxt "start-page.button.label"
-#| msgid "Get images"
 msgctxt "shortcut description"
 msgid "Next image"
-msgstr "Nouda kuvia"
+msgstr "Seuraava kuva"
 
 #: resources/ui/application-window.blp:30
 msgctxt "main-window.toolbar.button.tooltip"
@@ -293,19 +278,14 @@ msgid "Set current image as wallpaper"
 msgstr "Aseta nykyinen kuva taustakuvaksi"
 
 #: resources/ui/application-window.blp:102
-#, fuzzy
-#| msgid "The empty greeting page with the application icon"
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Open image with external application"
-msgstr "Tyhjä aloitusnäkymä sovelluksen kuvakkeen kera"
+msgstr "Avaa kuva erillisellä sovelluksella"
 
 #: resources/ui/application-window.blp:108
-#, fuzzy
-#| msgctxt "start-page.button.label"
-#| msgid "Get images"
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Save image"
-msgstr "Nouda kuvia"
+msgstr "Tallenna kuva"
 
 #: resources/ui/application-window.blp:119
 msgctxt "main-window.toolbar.button.tooltip"
@@ -461,7 +441,7 @@ msgstr "Avaa asetukset"
 #: src/app.rs:456
 msgctxt "command-line.option.description"
 msgid "Show image for the given date"
-msgstr ""
+msgstr "Näytä määritetyn päivän kuva"
 
 #: src/app.rs:461
 msgctxt "command-line.option.arg.description"
@@ -624,19 +604,13 @@ msgstr ""
 "ongelma jatkuu, ilmoita ongelmasta."
 
 #: src/app/widgets/application_window.rs:138
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to open source URL"
 msgctxt "error-notification.title"
 msgid "Failed to open image"
-msgstr "Lähdeosoitteen avaaminen epäonnistui"
+msgstr "Kuvan avaaminen epäonnistui"
 
 #: src/app/widgets/application_window.rs:153
-#, fuzzy
-#| msgctxt "shortcut description"
-#| msgid "Load images"
 msgid "Saved image %1"
-msgstr "Lataa kuvat"
+msgstr "Tallennettin kuva %1"
 
 #: src/app/widgets/application_window.rs:171
 #, fuzzy
@@ -653,12 +627,9 @@ msgstr ""
 "ongelma jatkuu, ilmoita ongelmasta."
 
 #: src/app/widgets/application_window.rs:177
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to open source URL"
 msgctxt "error-notification.title"
 msgid "Failed to save image"
-msgstr "Lähdeosoitteen avaaminen epäonnistui"
+msgstr "Kuvan tallentaminen epäonnistui"
 
 #: src/app/widgets/application_window.rs:194
 msgctxt "alert.response"
@@ -686,12 +657,9 @@ msgid "Details"
 msgstr "Yksityiskohdat"
 
 #: src/app/widgets/application_window.rs:469
-#, fuzzy
-#| msgctxt "start-page.button.label"
-#| msgid "Get images"
 msgctxt "file-dialog.title"
 msgid "Save image"
-msgstr "Nouda kuvia"
+msgstr "Tallenna kuva"
 
 #: src/app/widgets/preferences_dialog.rs:71
 msgid "%1/%2 collection enabled"
@@ -705,8 +673,6 @@ msgid "Picture Of The Day"
 msgstr "Päivän kuva"
 
 #: src/source.rs:66
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
 msgid "NASA Astronomy Picture of the Day"
 msgstr "NASA-tähtitieteen päivän kuva"
@@ -717,8 +683,6 @@ msgid "Bing"
 msgstr "Bing"
 
 #: src/source.rs:68
-#, fuzzy
-#| msgid "Wikimedia Picture Of The Day"
 msgctxt "source name"
 msgid "Wikimedia Picture of the Day"
 msgstr "Wikimedian päivän kuva"
@@ -729,23 +693,16 @@ msgid "Simon Stålenhag"
 msgstr "Simon Stålenhag"
 
 #: src/source.rs:70
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgctxt "source name"
 msgid "Earth Science Picture of the Day"
-msgstr "Päivän kuva"
+msgstr "Earth Sciencen päivän kuva"
 
 #: src/source.rs:74
-#, fuzzy
-#| msgid "NASA Astronomy Picture Of The Day"
 msgctxt "source name"
 msgid "NASA Earth Observatory Image of the Day"
-msgstr "NASA-tähtitieteen päivän kuva"
+msgstr "NASA-maaobservatorion päivän kuva"
 
 #: src/source/bing.rs:81
-#, fuzzy
-#| msgctxt "source.stalenhag.copyright"
-#| msgid "All rights reserved."
 msgctxt "source.bing.copyright"
 msgid "All rights reserved."
 msgstr "Kaikki oikeudet pidätetään."
