Update translation Chinese (Simplified Han script)
Translated with Weblate.

Currently translated at 100.0% (133 of 133 strings)

Co-authored-by: Outbreak2096 <outbreak2096@noreply.codeberg.org>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/zh_Hans/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-22 15:53+0000\n"
+"PO-Revision-Date: 2025-04-27 20:03+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
-"Language-Team: Chinese (Simplified Han script) <https://translate.codeberg."
-"org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/zh_Hans/>\n"
+"Language-Team: Chinese (Simplified Han script) <https://"
+"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
+"de-swsnr-pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -111,13 +112,14 @@ msgid ""
 "No longer set the wallpaper automatically while the main window is visible, "
 "to allow you to preview different sources without actually changing your "
 "desktop background."
-msgstr ""
+msgstr "当主窗口可见时，不再自动设置壁纸，以允许您预览不同的来源，而无需实际更改您的"
+"桌面背景。"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
 msgid ""
 "No longer attempt to set update wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
-msgstr ""
+msgstr "当会话锁定、系统电量不足或无网络连接时，不再尝试自动设置更新壁纸。"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:62
 msgid ""
