Update translation Dutch
Translated with Weblate.

Currently translated at 100.0% (133 of 133 strings)

Co-authored-by: Vistaus <vistaus@noreply.codeberg.org>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/nl.po
+++ b/po/nl.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-22 15:53+0000\n"
+"PO-Revision-Date: 2025-04-29 05:53+0000\n"
 "Last-Translator: Vistaus <vistaus@noreply.codeberg.org>\n"
-"Language-Team: Dutch <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
+"Language-Team: Dutch <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -116,12 +116,16 @@ msgid ""
 "to allow you to preview different sources without actually changing your "
 "desktop background."
 msgstr ""
+"De achtergrond wordt niet meer automatisch ingesteld terwijl het "
+"hoofdvenster zichtbaar is, zodat u eerst een keuze kunt maken."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
 msgid ""
 "No longer attempt to set update wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
 msgstr ""
+"De achtergrond wordt niet meer automatisch bijgewerkt terwijl de sessie "
+"vergrendeld is, er onvoldoende accu is of de netwerkverbinding verbroken is."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:62
 msgid ""
