--- a/po/et.po
+++ b/po/et.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-22 15:53+0000\n"
+"PO-Revision-Date: 2025-04-27 20:03+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
-"Language-Team: Estonian <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
+"Language-Team: Estonian <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -121,12 +121,17 @@ msgid ""
 "to allow you to preview different sources without actually changing your "
 "desktop background."
 msgstr ""
+"Kui rakenduse põhiaken on nähtaval, siis enam ei lisa/uuenda taustapilti "
+"automaatselt - see võimaldab kasutajatel valida erinevate allikate ja eri "
+"piltide vahel ilma koheseid muudatusi tegemata."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
 msgid ""
 "No longer attempt to set update wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
 msgstr ""
+"Kui sessioon on lukustatud või arvuti/nutiseade on energiasäästurežimil, "
+"siis enam me ei uuenda taustapilti automaatselt."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:62
 msgid ""
