Update translation German
Translated with Weblate.

Currently translated at 100.0% (133 of 133 strings)

Co-authored-by: Sebastian Wiesner <sebastian@swsnr.de>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-21 11:43+0000\n"
+"PO-Revision-Date: 2025-04-29 05:53+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -117,12 +117,18 @@ msgid ""
 "to allow you to preview different sources without actually changing your "
 "desktop background."
 msgstr ""
+"Das Hintergrundbild wird nicht mehr automatisch aktualisiert, solange das "
+"Hauptfenster sichtbar ist, so dass verschiedene Bildquellen angeschaut "
+"werden können ohne dass das Hintergrundbild sofort aktualisiert wird."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
 msgid ""
 "No longer attempt to set update wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
 msgstr ""
+"Das Hintergrundbild wird nicht mehr automatisch aktualisiert, während die "
+"Sitzung gesperrt ist, oder sich das System im Energiesparmodus befindet oder "
+"keine Netzwerkverbindung hat."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:62
 msgid ""
