--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-30 19:34+0000\n"
+"PO-Revision-Date: 2025-05-03 11:52+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -122,10 +122,6 @@ msgstr ""
 "werden können ohne dass das Hintergrundbild sofort aktualisiert wird."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
-#, fuzzy
-#| msgid ""
-#| "No longer attempt to set update wallpaper automatically while the session "
-#| "is locked, or the system is on low power or has no network connection."
 msgid ""
 "No longer attempt to set the wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
