Update translation files
Updated by "Update PO files to match POT (msgmerge)" add-on in Weblate.

Co-authored-by: Codeberg Translate <translate@codeberg.org>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/de.po
+++ b/po/de.po
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2025-04-30 19:34+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/"
-"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
+"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -122,8 +122,12 @@ msgstr ""
 "werden können ohne dass das Hintergrundbild sofort aktualisiert wird."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
+#, fuzzy
+#| msgid ""
+#| "No longer attempt to set update wallpaper automatically while the session "
+#| "is locked, or the system is on low power or has no network connection."
 msgid ""
-"No longer attempt to set update wallpaper automatically while the session is "
+"No longer attempt to set the wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
 msgstr ""
 "Das Hintergrundbild wird nicht mehr automatisch aktualisiert, während die "
