--- a/po/fi.po
+++ b/po/fi.po
@@ -119,7 +119,7 @@ msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
 msgid ""
-"No longer attempt to set update wallpaper automatically while the session is "
+"No longer attempt to set the wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
 msgstr ""
 
