--- a/po/et.po
+++ b/po/et.po
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2025-05-02 06:53+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
-"Language-Team: Estonian <https://translate.codeberg.org/projects/"
-"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
+"Language-Team: Estonian <https://translate.codeberg.org/projects/de-swsnr-"
+"pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -126,8 +126,12 @@ msgstr ""
 "piltide vahel ilma koheseid muudatusi tegemata."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
+#, fuzzy
+#| msgid ""
+#| "No longer attempt to set update wallpaper automatically while the session "
+#| "is locked, or the system is on low power or has no network connection."
 msgid ""
-"No longer attempt to set update wallpaper automatically while the session is "
+"No longer attempt to set the wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
 msgstr ""
 "Kui sessioon on lukustatud või arvuti/nutiseade on energiasäästurežimil, "
