--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -9,9 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2025-05-02 06:53+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
-"Language-Team: Chinese (Simplified Han script) <https://"
-"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
-"de-swsnr-pictureoftheday/zh_Hans/>\n"
+"Language-Team: Chinese (Simplified Han script) <https://translate.codeberg."
+"org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -117,8 +116,12 @@ msgstr ""
 "桌面背景。"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
+#, fuzzy
+#| msgid ""
+#| "No longer attempt to set update wallpaper automatically while the session "
+#| "is locked, or the system is on low power or has no network connection."
 msgid ""
-"No longer attempt to set update wallpaper automatically while the session is "
+"No longer attempt to set the wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
 msgstr "当会话锁定、系统电量不足或无网络连接时，不再尝试自动设置壁纸。"
 
