--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-05-02 06:53+0000\n"
+"PO-Revision-Date: 2025-05-06 07:53+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
-"Language-Team: Chinese (Simplified Han script) <https://translate.codeberg."
-"org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/zh_Hans/>\n"
+"Language-Team: Chinese (Simplified Han script) <https://"
+"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
+"de-swsnr-pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -116,10 +117,6 @@ msgstr ""
 "桌面背景。"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
-#, fuzzy
-#| msgid ""
-#| "No longer attempt to set update wallpaper automatically while the session "
-#| "is locked, or the system is on low power or has no network connection."
 msgid ""
 "No longer attempt to set the wallpaper automatically while the session is "
 "locked, or the system is on low power or has no network connection."
