--- a/po/de.po
+++ b/po/de.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-05-03 11:52+0000\n"
+"PO-Revision-Date: 2025-05-22 09:46+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.10.2\n"
+"X-Generator: Weblate 5.11.4\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -136,6 +136,8 @@ msgstr "Kunstwerk"
 #: de.swsnr.pictureoftheday.metainfo.xml:49
 msgid "Change license to European Union Public License 1.2."
 msgstr ""
+"Die Lizenz wurde zur Open-Source-Lizenz für die Europäische Union 1.2 "
+"geändert."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:55
 msgid ""
@@ -460,13 +462,13 @@ msgstr "Hilfreiche Dienste"
 #: src/app.rs:165
 msgctxt "about-dialog.other-app.name"
 msgid "Turn On"
-msgstr ""
+msgstr "Anschalten"
 
 #. Translators: Use translated app summary from https://flathub.org/apps/de.swsnr.turnon
 #: src/app.rs:170
 msgctxt "about-dialog.other-app.summary"
 msgid "Turn on devices in your network"
-msgstr ""
+msgstr "Geräte in Deinem Netzwerk anschalten"
 
 #: src/app.rs:188
 msgctxt "notification.title"
@@ -764,6 +766,14 @@ msgid ""
 "\n"
 "%2"
 msgstr ""
+"Copyright Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
+"\n"
+"Lizenziert unter den Bedingungen der EUPL 1.2. Unter <a href=\"%1\">%1</a> "
+"kannst Du eine offizielle Übersetzung der Lizenz finden.\n"
+"\n"
+"Es folgt der vollständige englische Text.\n"
+"\n"
+"%2"
 
 #: src/images/source.rs:58
 msgctxt "source name"
