--- a/po/et.po
+++ b/po/et.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-05-06 07:53+0000\n"
+"PO-Revision-Date: 2025-05-22 09:42+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
-"Language-Team: Estonian <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
+"Language-Team: Estonian <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.10.2\n"
+"X-Generator: Weblate 5.11.4\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -137,6 +137,8 @@ msgstr "Kunst"
 #: de.swsnr.pictureoftheday.metainfo.xml:49
 msgid "Change license to European Union Public License 1.2."
 msgstr ""
+"Muutsime litsentseerimist ning nüüdsest on lähtekood avaldatud Euroopa Liidu "
+"avaliku litsentsi versiooni 1.2 alusel."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:55
 msgid ""
@@ -460,13 +462,13 @@ msgstr "Abiks olevad teenused"
 #: src/app.rs:165
 msgctxt "about-dialog.other-app.name"
 msgid "Turn On"
-msgstr ""
+msgstr "Lülita sisse"
 
 #. Translators: Use translated app summary from https://flathub.org/apps/de.swsnr.turnon
 #: src/app.rs:170
 msgctxt "about-dialog.other-app.summary"
 msgid "Turn on devices in your network"
-msgstr ""
+msgstr "Lülita seadmed oma võrgus sisse"
 
 #: src/app.rs:188
 msgctxt "notification.title"
@@ -762,6 +764,14 @@ msgid ""
 "\n"
 "%2"
 msgstr ""
+"Autoriõigused Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
+"\n"
+"Litsentseeritud Euroopa Liidu avaliku litsentsi versiooni 1.2 alusel, mille "
+"ametliku tõlke leiad siit: <a href=\"%1\">%1</a>.\n"
+"\n"
+"Järgnev on litsentsi ingliskeelne täistekst.\n"
+"\n"
+"%2"
 
 #: src/images/source.rs:58
 msgctxt "source name"
