Update translation Estonian
Translated with Weblate.

Currently translated at 100.0% (144 of 144 strings)

Co-authored-by: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/et.po
+++ b/po/et.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-05-22 09:42+0000\n"
+"PO-Revision-Date: 2025-05-23 15:58+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
 "Language-Team: Estonian <https://translate.codeberg.org/projects/"
 "de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
@@ -138,7 +138,7 @@ msgstr "Kunst"
 msgid "Change license to European Union Public License 1.2."
 msgstr ""
 "Muutsime litsentseerimist ning nüüdsest on lähtekood avaldatud Euroopa Liidu "
-"avaliku litsentsi versiooni 1.2 alusel."
+"tarkvara vaba kasutuse litsentsi („EUPL“) versiooni 1.2 alusel."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:55
 msgid ""
@@ -766,8 +766,9 @@ msgid ""
 msgstr ""
 "Autoriõigused Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
 "\n"
-"Litsentseeritud Euroopa Liidu avaliku litsentsi versiooni 1.2 alusel, mille "
-"ametliku tõlke leiad siit: <a href=\"%1\">%1</a>.\n"
+"Litsentseeritud Euroopa Liidu tarkvara vaba kasutuse litsentsi („EUPL“) "
+"versiooni 1.2 alusel, mille ametliku tõlke leiad siit: <a href=\"%1\">%1</a>."
+"\n"
 "\n"
 "Järgnev on litsentsi ingliskeelne täistekst.\n"
 "\n"
